--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,7 @@
         android:layout_marginTop="96dp"
         android:text="@string/register_link"
         android:textSize="8pt"
-        android:onClick="next"
+        android:onClick="goToRegisterView"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
