Register - auth works

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -100,6 +100,7 @@
         android:layout_width="145dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:onClick="processRegistration"
         android:text="@string/register_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
