--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,6 +36,7 @@
         android:id="@+id/loginButton"
         android:layout_width="174dp"
         android:layout_height="wrap_content"
+        android:onClick="onLogin"
         android:text="@string/login_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
