--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#5A65C6</color>
     <color name="colorPrimaryDark">#363d78</color>
-    <color name="colorAccent">#c68c5a</color>
+    <color name="colorAccent">#85514E</color>
 </resources>
