--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -23,7 +23,8 @@
         <item
             android:id="@+id/nav_residents"
             android:icon="@drawable/icon_residents"
-            android:title="Residents" />
+            android:title="Residents"
+            android:visible="false"/>
     </group>
 
     <item android:title="">
