--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,5 +8,7 @@
         android:id="@+id/home_array_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@null"/>
+        android:divider="@null"
+        android:dividerHeight="10dp"/>
+
 </RelativeLayout>
