--- a/app/src/main/res/layout/list_item_card.xml
+++ b/app/src/main/res/layout/list_item_card.xml
@@ -23,7 +23,10 @@
             android:id="@+id/line1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Text line 1" />
+            android:text="Text line 1"
+            android:textAlignment="textStart"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/line2"
