--- a/app/src/main/res/layout/fragment_residents.xml
+++ b/app/src/main/res/layout/fragment_residents.xml
@@ -5,7 +5,7 @@
 
 
     <ListView
-        android:id="@+id/home_array_list"
+        android:id="@+id/residents_array_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@null"
